# zerobounceindia-cpp-api-wrapper

./: .gitignore  CMakeLists.txt  README.md  README_es.md  documentation.md  documentation_es.md  email_file.csv
include/ZeroBounce/: ZBActivityDataResponse.h  ZBCreditsResponse.h  ZBDeleteFileResponse.h  ZBErrorResponse.h  ZBFileStatusResponse.h  ZBFindEmailResponse.h  ZBGetApiUsageResponse.h  ZBGetFileResponse.h  ZBSendFileResponse.h  ZBValidateBatchResponse.h  ZBValidateResponse.h  ZBValidateStatus.h  ZBValidateSubStatus.h  ZeroBounce.h  utils.h
src/: ZBActivityDataResponse.cpp  ZBCreditsResponse.cpp  ZBDeleteFileResponse.cpp  ZBErrorResponse.cpp  ZBFileStatusResponse.cpp  ZBFindEmailResponse.cpp  ZBGetApiUsageResponse.cpp  ZBGetFileResponse.cpp  ZBSendFileResponse.cpp  ZBValidateBatchResponse.cpp  ZBValidateRespone.cpp  ZeroBounce  ZeroBounce.cpp
test/: ZeroBounceTest.cpp
